# athena-bedrock-gen-ai

./: .env.template  Makefile  README.md  pyproject.toml
data/: data_catalog.json
src/: app.py  embed.py
